force-app/main/default/objects/Weather__c/Weather__c.object-meta.xml
<CustomObject>
    <label>Weather</label>
    <nameField>
        <displayFormat>INC{0000}</displayFormat>
        <label>Weather Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weather</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>