force-app/main/default/objects/Weather__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Weather</relationshipLabel>
    <relationshipName>Weather</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>