force-app/main/default/objects/Weather__c/fields/Temp__c.field-meta.xml
<CustomField>
    <fullName>Temp__c</fullName>
    <label>Temp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>