force-app/main/default/objects/Weather__c/fields/Weather_des__c.field-meta.xml
<CustomField>
    <fullName>Weather_des__c</fullName>
    <label>Weather des</label>
    <length>255</length>
    <type>Text</type>
</CustomField>